src/hyperf/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hyperf
spec:
  hosts:
    - "apisix.example.local"
  gateways:
    - "istio-system/istio-gateway"
  http:
    - match:
      - uri:
          prefix: "/"
      route:
      - destination:
          host: hyperf
          port:
            number: 9501
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hyperf
spec:
  host: hyperf
  subsets: 
    - name: v1
      labels:
        version: v1
